--- a/app/index.yaml
+++ b/app/index.yaml
@@ -24,20 +24,20 @@ indexes:
 
 - kind: Member
   properties:
-  - name: Game.State
-  - name: ID
-  - name: Game.CreatedAt
+  - name: GameData.State
+  - name: User.Id
+  - name: GameData.CreatedAt
 
 - kind: Member
   properties:
-  - name: Game.State
-  - name: ID
-  - name: Game.NMembers
+  - name: GameData.State
+  - name: User.Id
+  - name: GameData.NMembers
     direction: desc
-  - name: Game.CreatedAt
+  - name: GameData.CreatedAt
 
 - kind: Member
   properties:
-  - name: Game.State
-  - name: ID
-  - name: Game.NextDeadlineAt
+  - name: GameData.State
+  - name: User.Id
+  - name: GameData.NextDeadlineAt
