Fixed some weirdness in the games filters.

--- a/app/index.yaml
+++ b/app/index.yaml
@@ -13,7 +13,6 @@ indexes:
 - kind: Game
   properties:
   - name: Closed
-  - name: GameData.Variant
   - name: NMembers
     direction: desc
   - name: CreatedAt
@@ -21,6 +20,7 @@ indexes:
 - kind: Game
   properties:
   - name: Closed
+  - name: Variant
   - name: NMembers
     direction: desc
   - name: CreatedAt
@@ -34,37 +34,41 @@ indexes:
 - kind: Game
   properties:
   - name: Finished
-  - name: GameData.Variant
+  - name: Variant
   - name: CreatedAt
     direction: desc
 
 - kind: Game
   properties:
-  - name: GameData.Variant
   - name: Started
   - name: CreatedAt
 
 - kind: Game
   properties:
   - name: Started
+  - name: Variant
   - name: CreatedAt
 
 - kind: Member
   properties:
   - name: GameData.Finished
   - name: GameData.Variant
+  - name: User.Id
   - name: GameData.CreatedAt
     direction: desc
 
 - kind: Member
   properties:
   - name: GameData.Finished
+  - name: User.Id
   - name: GameData.CreatedAt
     direction: desc
 
 - kind: Member
   properties:
   - name: GameData.Started
+  - name: GameData.Variant
+  - name: User.Id
   - name: GameData.NMembers
     direction: desc
   - name: GameData.CreatedAt
@@ -72,12 +76,14 @@ indexes:
 - kind: Member
   properties:
   - name: GameData.Started
+  - name: GameData.Variant
+  - name: User.Id
   - name: GameData.NextDeadlineAt
 
 - kind: Member
   properties:
   - name: GameData.Started
-  - name: GameData.Variant
+  - name: User.Id
   - name: GameData.NMembers
     direction: desc
   - name: GameData.CreatedAt
@@ -85,5 +91,5 @@ indexes:
 - kind: Member
   properties:
   - name: GameData.Started
-  - name: GameData.Variant
+  - name: User.Id
   - name: GameData.NextDeadlineAt
