--- a/app/index.yaml
+++ b/app/index.yaml
@@ -93,3 +93,14 @@ indexes:
   - name: GameData.Started
   - name: User.Id
   - name: GameData.NextDeadlineAt
+
+- kind: Message
+  ancestor: yes
+  properties:
+  - name: CreatedAt
+
+- kind: Message
+  ancestor: yes
+  properties:
+  - name: CreatedAt
+    direction: desc
