Rearranged the queues again.

--- a/app/queue.yaml
+++ b/app/queue.yaml
@@ -1,5 +1,9 @@
 queue:
 - name: game-timeoutResolvePhase
   rate: 500/s
-- name: game-fcmNotify
+- name: game-fcmSendToUsers
+  rate: 500/s
+- name: game-fcmSendToTokens
+  rate: 500/s
+- name: game-manageFCMTokens
   rate: 500/s
