--- a/app/app.yaml
+++ b/app/app.yaml
@@ -9,6 +9,10 @@ handlers:
   upload: js/firebase-messaging-sw.js
 - url: /js
   static_dir: js
+- url: /css
+  static_dir: css
+- url: /img
+  static_dir: img
 - url: /.*
   script: _go_app
   secure: always
