--- a/app/queue.yaml
+++ b/app/queue.yaml
@@ -7,3 +7,7 @@ queue:
   rate: 500/s
 - name: game-manageFCMTokens
   rate: 500/s
+- name: game-sendPhaseNotificationsToFCM
+  rate: 500/s
+- name: game-sendPhaseNotificationsToUsers
+  rate: 500/s
