Added info about the fake email query param to the root docs. Added a queue to send email with. Fixed the mail notification config type. Added a (so far) empty unsubscribe handler. Added a task to send notification email for messages. Made the send to users task call it. Made the message sender not get the message. Added a server config for send grid API key. Extracted game result from game.go into its own file.

--- a/app/queue.yaml
+++ b/app/queue.yaml
@@ -13,3 +13,5 @@ queue:
   rate: 500/s
 - name: game-sendMsgNotificationsToFCM
   rate: 500/s
+- name: game-sendMsgNotificationsToMail
+  rate: 500/s
