--- a/app/app.yaml
+++ b/app/app.yaml
@@ -3,6 +3,9 @@ version: 1
 runtime: go
 api_version: go1
 
+inbound_services:
+- mail
+
 handlers:
 - url: /(firebase-messaging-sw.js)
   static_files: js/\1
