Added queue for updating single user stats object.

--- a/app/queue.yaml
+++ b/app/queue.yaml
@@ -1,6 +1,8 @@
 queue:
 - name: game-updateUserStats
   rate: 500/s
+- name: game-updateUserStat
+  rate: 500/s
 - name: game-timeoutResolvePhase
   rate: 500/s
 - name: game-fcmSendToTokens
