Added indices for finding unrated games sorted oldest first, and glickos sorted newest first. Added queue for updating glickos. Added finished at for games. Added glicko calculation for finished games.

--- a/app/index.yaml
+++ b/app/index.yaml
@@ -98,6 +98,17 @@ indexes:
     direction: desc
   - name: CreatedAt
 
+- kind: GameResult
+  properties:
+  - name: Rated
+  - name: CreatedAt
+
+- kind: Glicko
+  properties:
+  - name: UserId
+  - name: CreatedAt
+    direction: desc
+
 - kind: Message
   ancestor: yes
   properties:
