--- a/circle.yml
+++ b/circle.yml
@@ -3,3 +3,10 @@ dependencies:
     - "~/go_appengine" # relative to the user's home directory
   pre:
     - ./maybe_install_sdk.sh
+test:
+  pre:
+    - cd app
+    - sh -c "dev_appserver.py --clear_datastore=yes  --datastore_consistency_policy=consistent --skip_sdk_update_check > dev_appserver.log 2>&1" &
+  override:
+    - cd diptest
+    - go test -v
