--- a/circle.yml
+++ b/circle.yml
@@ -4,10 +4,10 @@ dependencies:
     - "~/golang"
   override:
     - ./maybe_install_go.sh
-    - sh -c "$HOME/golang/bin/go get -v ./... || true"
+    - sh -c "env GOROOT=$HOME/golang $HOME/golang/bin/go get -v ./... || true"
     - ./maybe_install_sdk.sh
 test:
   pre:
     - sh -c "cd app && dev_appserver.py --clear_datastore=yes  --datastore_consistency_policy=consistent --skip_sdk_update_check > dev_appserver.log 2>&1" &
   override:
-    - sh -c "cd diptest && $HOME/golang/bin/go test -v"
+    - sh -c "cd diptest && env GOROOT=$HOME/golang $HOME/golang/bin/go test -v"
