--- a/circle.yml
+++ b/circle.yml
@@ -10,4 +10,5 @@ test:
   pre:
     - sh -c "cd app && dev_appserver.py --clear_datastore=yes  --datastore_consistency_policy=consistent --skip_sdk_update_check > dev_appserver.log 2>&1" &
   override:
-    - sh -c "sleep 30 && cd diptest && env GOROOT=$HOME/golang $HOME/golang/bin/go test -v"
+    - curl -s --connect-timeout 300 -o /dev/null http://localhost:8080/
+    - sh -c "cd diptest && env GOROOT=$HOME/golang $HOME/golang/bin/go test -v"
