--- a/circle.yml
+++ b/circle.yml
@@ -1,14 +1,14 @@
 dependencies:
   cache_directories:
-    - "~/go_appengine"
-    - "~/golang"
+    - ~/go_appengine
+    - ~/golang
   override:
+    - ip addr
     - ./maybe_install_go.sh
     - sh -c "env GOROOT=$HOME/golang $HOME/golang/bin/go get -v ./... || true"
     - ./maybe_install_sdk.sh
 test:
   pre:
-    - ip addr
     - sh -c "cd app && $HOME/go_appengine/dev_appserver.py --clear_datastore=yes  --datastore_consistency_policy=consistent --skip_sdk_update_check":
         background: true
   override:
