--- a/circle.yml
+++ b/circle.yml
@@ -3,15 +3,15 @@ dependencies:
     - ~/go_appengine
     - ~/golang
   override:
-    - ./maybe_install_go.sh
+    - ./circle/maybe_install_go.sh
     - sh -c "env GOROOT=$HOME/golang $HOME/golang/bin/go get -v ./... || true"
-    - ./maybe_install_sdk.sh
+    - ./circle/maybe_install_sdk.sh
 test:
   pre:
     - sh -c "cd app && $HOME/go_appengine/dev_appserver.py --clear_datastore=yes  --datastore_consistency_policy=consistent --skip_sdk_update_check=yes .":
         background: true
   override:
-    - sh -c "while ! curl -s -o /dev/null http://localhost:8080; do echo Waiting; sleep 1; done"
+    - sh -c "while ! curl -s -o /dev/null http://localhost:8080; do echo Waiting; sleep 10; done"
     - sh -c "cd diptest && env GOROOT=$HOME/golang $HOME/golang/bin/go test -v"
 
    
