--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,7 @@ dependencies:
   override:
     - ./circle/maybe_install_go.sh
     - sh -c "env GOROOT=$HOME/golang $HOME/golang/bin/go get -v ./... || true"
+    - sh -c "env GOROOT=$HOME/golang $HOME/golang/bin/go get github.com/jstemmer/go-junit-report"
     - ./circle/maybe_install_sdk.sh
 test:
   pre:
@@ -12,6 +13,6 @@ test:
         background: true
   override:
     - sh -c "while ! curl -s -o /dev/null http://localhost:8080; do echo Waiting; sleep 10; done"
-    - sh -c "cd diptest && env GOROOT=$HOME/golang $HOME/golang/bin/go test -v"
+    - sh -c "cd diptest && env GOROOT=$HOME/golang $HOME/golang/bin/go test -v | go-junit-report > $CIRCLE_TEST_REPORTS/report.xml"
 
    
