--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,9 @@ dependencies:
     - ~/golang
   override:
     - ./circle/maybe_install_go.sh
+    - sh -c "rm -rf $HOME/.go_workspace/src/github.com/zond/diplicity"
+    - sh -c "mv -v diplicity $HOME/.go_workspace/src/github.com/zond/diplicity"
+    - sh -c "ln -s $HOME/.go_workspace/src/github.com/zond/diplicity diplicity"
     - sh -c "env GOROOT=$HOME/golang $HOME/golang/bin/go get -u -v ./... || true"
     - sh -c "env GOROOT=$HOME/golang $HOME/golang/bin/go get github.com/jstemmer/go-junit-report"
     - ./circle/maybe_install_sdk.sh
