--- a/circle.yml
+++ b/circle.yml
@@ -16,6 +16,6 @@ test:
         background: true
   override:
     - sh -c "while ! curl -s -o /dev/null http://localhost:8080; do echo Waiting; sleep 10; done"
-    - sh -c "cd diptest && env GOROOT=$HOME/golang $HOME/golang/bin/go test -v | go-junit-report > $CIRCLE_TEST_REPORTS/report.xml"
+    - sh -c "cd diptest && set -o pipefail && env GOROOT=$HOME/golang $HOME/golang/bin/go test -v | go-junit-report > $CIRCLE_TEST_REPORTS/report.xml"
 
    
