Added a separate queue for re-rating glickos.

--- a/app/queue.yaml
+++ b/app/queue.yaml
@@ -1,6 +1,8 @@
 queue:
 - name: game-updateGlickos
   rate: 500/s
+- name: game-reRateGlickos
+  rate: 500/s
 - name: game-updateUserStats
   rate: 500/s
 - name: game-updateUserStat
