--- a/app/queue.yaml
+++ b/app/queue.yaml
@@ -9,6 +9,8 @@ queue:
   rate: 500/s
 - name: game-timeoutResolvePhase
   rate: 500/s
+- name: game-asyncResolvePhase
+  rate: 500/s
 - name: game-fcmSendToTokens
   rate: 500/s
 - name: game-manageFCMTokens
