Made game starting create the options for all members. Made game starting happen asynchronously to avoid slow requests.

--- a/app/queue.yaml
+++ b/app/queue.yaml
@@ -9,6 +9,8 @@ queue:
   rate: 500/s
 - name: game-timeoutResolvePhase
   rate: 500/s
+- name: game-asyncStartGame
+  rate: 500/s
 - name: game-asyncResolvePhase
   rate: 500/s
 - name: game-fcmSendToTokens
