Changed gcloud version.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,6 +19,8 @@ jobs:
       id: go
     - name: Set up GoogleCloudPlatform
       uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+      with:
+        version: '252.0.0'
     - name: Debug GoogleCloudPlatform
       run: gcloud info
     - name: Install App Engine Go
