--- a/queue.yaml
+++ b/queue.yaml
@@ -1,37 +1,39 @@
 queue:
-- name: game-ejectMember
-  rate: 500/s
-- name: game-resave
-  rate: 500/s
-- name: game-updateGlickos
-  rate: 500/s
-- name: game-reRateGlickos
-  rate: 500/s
-- name: game-updateUserStats
-  rate: 500/s
-- name: game-updateUserStat
-  rate: 500/s
-- name: game-timeoutResolvePhase
-  rate: 500/s
-- name: game-asyncStartGame
-  rate: 500/s
-- name: game-asyncResolvePhase
-  rate: 500/s
-- name: game-fcmSendToTokens
-  rate: 500/s
-- name: game-manageFCMTokens
-  rate: 500/s
-- name: game-sendPhaseNotificationsToUsers
-  rate: 500/s
-- name: game-sendPhaseNotificationsToFCM
-  rate: 500/s
-- name: game-sendPhaseNotificationsToMail
-  rate: 500/s
-- name: game-sendMsgNotificationsToUsers
-  rate: 500/s
-- name: game-sendMsgNotificationsToFCM
-  rate: 500/s
-- name: game-sendMsgNotificationsToMail
-  rate: 500/s
-- name: game-ejectProbationaries
-  rate: 500/s
+    - name: game-ejectMember
+      rate: 500/s
+    - name: game-reScore
+      rate: 500/s
+    - name: game-resave
+      rate: 500/s
+    - name: game-updateGlickos
+      rate: 500/s
+    - name: game-reRateGlickos
+      rate: 500/s
+    - name: game-updateUserStats
+      rate: 500/s
+    - name: game-updateUserStat
+      rate: 500/s
+    - name: game-timeoutResolvePhase
+      rate: 500/s
+    - name: game-asyncStartGame
+      rate: 500/s
+    - name: game-asyncResolvePhase
+      rate: 500/s
+    - name: game-fcmSendToTokens
+      rate: 500/s
+    - name: game-manageFCMTokens
+      rate: 500/s
+    - name: game-sendPhaseNotificationsToUsers
+      rate: 500/s
+    - name: game-sendPhaseNotificationsToFCM
+      rate: 500/s
+    - name: game-sendPhaseNotificationsToMail
+      rate: 500/s
+    - name: game-sendMsgNotificationsToUsers
+      rate: 500/s
+    - name: game-sendMsgNotificationsToFCM
+      rate: 500/s
+    - name: game-sendMsgNotificationsToMail
+      rate: 500/s
+    - name: game-ejectProbationaries
+      rate: 500/s
