--- a/queue.yaml
+++ b/queue.yaml
@@ -1,4 +1,6 @@
 queue:
+    - name: game-planPhaseTimeout
+      rate: 500/s
     - name: game-ejectMember
       rate: 500/s
     - name: game-reScore
