Turned on phase deadline warnings for players that want it. Added more explanations about game results.

--- a/queue.yaml
+++ b/queue.yaml
@@ -1,4 +1,6 @@
 queue:
+    - name: game-sendPhaseDeadlineWarning
+      rate: 500/s
     - name: game-planPhaseTimeout
       rate: 500/s
     - name: game-ejectMember
