Made re-rating not update user stats. Added another handler to update stats for all users synchronously.

--- a/queue.yaml
+++ b/queue.yaml
@@ -1,4 +1,6 @@
 queue:
+    - name: game-updateAllUserStats
+      rate: 10/s
     - name: game-reGameResult
       rate: 500/s
     - name: game-reRateTrueSkills
