New queue for recalc DIAS users. Made DelayFuncs require non-empty queues.

--- a/queue.yaml
+++ b/queue.yaml
@@ -1,4 +1,6 @@
 queue:
+    - name: game-reCalculateDIASUsers
+      rate: 10/s
     - name: game-asyncSendMsg
       rate: 10/s
     - name: game-updateAllUserStats
