--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,33 +1,32 @@
 name: Test diplicity
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    push:
+        branches: [master]
+    pull_request:
+        branches: [master]
 
 jobs:
-  build:
+    build:
+        runs-on: ubuntu-latest
 
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Set up Go 1.14
-      uses: actions/setup-go@v1
-      with:
-        go-version: 1.14
-      id: go
-    - name: Set up GoogleCloudPlatform
-      uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
-    - name: Debug log GoogleCloudPlatform info
-      run: gcloud info
-    - name: Install App Engine Go
-      run: gcloud components install app-engine-go
-    - name: Extract GoogleCloudPlatform installation root
-      run: echo "::set-env name=GCLOUD_ROOT::$(gcloud info | grep 'Installation Root:' | sed -e 's/.*\[\([^]]\+\).*/\1/')"
-    - name: Check out code
-      uses: actions/checkout@v2
-    - name: Start test server
-      run: ${GITHUB_WORKSPACE}/diptest/start_test_server.sh
-    - name: Run tests
-      run: cd diptest && go test -v -timeout 40m
+        steps:
+            - name: Set up Go 1.14
+              uses: actions/setup-go@v1
+              with:
+                  go-version: 1.14
+              id: go
+            - name: Set up GoogleCloudPlatform
+              uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+            - name: Debug log GoogleCloudPlatform info
+              run: gcloud info
+            - name: Install App Engine Go
+              run: gcloud components install app-engine-go
+            - name: Extract GoogleCloudPlatform installation root
+              run: echo "GCLOUD_ROOT=$(gcloud info | grep 'Installation Root:' | sed -e 's/.*\[\([^]]\+\).*/\1/')" >> $GITHUB_ENV
+            - name: Check out code
+              uses: actions/checkout@v2
+            - name: Start test server
+              run: ${GITHUB_WORKSPACE}/diptest/start_test_server.sh
+            - name: Run tests
+              run: cd diptest && go test -v -timeout 40m
