--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,7 +17,7 @@ jobs:
                   go-version: 1.14
               id: go
             - name: Set up GoogleCloudPlatform
-              uses: google-github-actions/setup-gcloud@master
+              uses: google-github-actions/setup-gcloud@v0
             - name: Debug log GoogleCloudPlatform info
               run: gcloud info
             - name: Install App Engine Go
