--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,6 +26,12 @@ jobs:
               run: echo "GCLOUD_ROOT=$(gcloud info | grep 'Installation Root:' | sed -e 's/.*\[\([^]]\+\).*/\1/')" >> $GITHUB_ENV
             - name: Check out code
               uses: actions/checkout@v2
+            - name: Set up Python2.7
+              uses: actions/setup-python@v4
+              id: setup-python2
+              with:
+                  python-version: 2.7
+                  update-environment: false
             - name: Start test server
               run: ${GITHUB_WORKSPACE}/diptest/start_test_server.sh
             - name: Run tests
