--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,11 +11,13 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - name: Set up Go 1.16
-              uses: actions/setup-go@v1
+            - name: Setup Go
+              uses: actions/setup-go@v3
               with:
-                  go-version: 1.16
-              id: go
+                  go-version: '1.20'
+                  check-latest: true
+            - name: Check Go version
+              run: go version
             - name: Set up GoogleCloudPlatform
               uses: google-github-actions/setup-gcloud@v0
             - name: Debug log GoogleCloudPlatform info
